--- a/css/style-re.css
+++ b/css/style-re.css
@@ -218,7 +218,7 @@
     }
 
     main .section:nth-child(1) .mainbg {
-        background: url(../image/1page-background.png) no-repeat -820px center/cover;
+        background: url(../image/1page-background.png) no-repeat right center/cover;
     }
 
     main .section:nth-child(1) h1 {
@@ -376,6 +376,7 @@
     .section:nth-child(4) h3 {
         font-size: 5rem;
         text-align: center;
+        white-space: nowrap;
     }
     .section:nth-child(4) p {
         font-size: 2rem;
